[gd_scene load_steps=2 format=3 uid="uid://b08thufxm5nj2"]

[ext_resource type="Script" path="res://arcade/scenes/Arena/arena_game_over_menu.gd" id="1_ddclx"]

[node name="ArenaGameOverMenu" type="CanvasLayer"]
script = ExtResource("1_ddclx")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.0
offset_top = -104.0
offset_right = 113.0
offset_bottom = 104.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -73.5
offset_right = 48.0
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RatsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="JockeysLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
